force-app/main/default/objects/Room__c/Room__c.object-meta.xml
<CustomObject>
    <customHelpPage>SampleTst</customHelpPage>
    <description>This object created for room mates</description>
    <label>Room</label>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>