force-app/main/default/objects/Room__c/fields/Room_No__c.field-meta.xml
<CustomField>
    <fullName>Room_No__c</fullName>
    <description>This field about room no</description>
    <externalId>true</externalId>
    <label>Room No</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>